force-app/main/default/objects/VS_Facility__c/VS_Facility__c.object-meta.xml
<CustomObject>
    <label>VS Facility</label>
    <pluralLabel>VS Facilities</pluralLabel>
    <description>F-001 slot-booking-core (VS-01, EP-01). PHC/CHC/District Hospital reference record — discoverable by citizens (REQ-001) and the parent of Session/Facility_Service/Holiday. OWD Public Read Only (design §2.2). Retention class (Annexure C4): permanent reference — never purged by VS_RetentionPurgeBatch.</description>
    <sharingModel>Read</sharingModel>
    <nameField>
        <label>Facility Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>