force-app/main/default/objects/VS_Facility__c/fields/VS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>VS_External_Id__c</fullName>
    <label>External Id</label>
    <description>External system key reserved for a future CoWIN/U-WIN integration seam (OQ-016); not populated in F-001. Marked External ID + Unique so a later integration upserts without duplicating facilities.</description>
    <type>Text</type>
    <length>30</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>