force-app/main/default/objects/VS_Facility__c/fields/VS_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>VS_Facility_Type__c</fullName>
    <label>Facility Type</label>
    <description>Facility tier used for discovery filtering and capacity-planning reporting (REQ-001, design §2.3). Values match design exactly: PHC, CHC, DistrictHospital.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHC</fullName>
                <default>true</default>
                <label>PHC</label>
            </value>
            <value>
                <fullName>CHC</fullName>
            </value>
            <value>
                <fullName>DistrictHospital</fullName>
                <label>District Hospital</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>