force-app/main/default/objects/VS_Facility__c/fields/VS_Helpline_Number__c.field-meta.xml
<CustomField>
    <fullName>VS_Helpline_Number__c</fullName>
    <label>Helpline Number</label>
    <description>Facility helpline phone number that MUST appear in every actionable SMS template sent about a booking at this facility (Annexure C7.3). Not a person's number — facility-level contact only.</description>
    <type>Phone</type>
</CustomField>