force-app/main/default/objects/VS_Facility__c/fields/VS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>VS_Is_Active__c</fullName>
    <label>Is Active</label>
    <description>When unchecked, the facility is excluded from citizen discovery search results (REQ-001) and new session creation, without deleting historical data.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>