force-app/main/default/objects/VS_Facility__c/fields/VS_Location__c.field-meta.xml
<CustomField>
    <fullName>VS_Location__c</fullName>
    <label>Location</label>
    <description>Facility latitude/longitude used to order citizen discovery search results by proximity (REQ-001, VS-15). No person data — facility-level only.</description>
    <type>Location</type>
    <scale>5</scale>
</CustomField>