force-app/main/default/objects/VS_Facility__c/fields/VS_Operating_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>VS_Operating_Start_Time__c</fullName>
    <label>Operating Start Time</label>
    <description>Facility's daily opening time, used by VS-03 (session flow) and VS-06 (slot generation) to bound session windows (REQ-009).</description>
    <type>Time</type>
</CustomField>