force-app/main/default/objects/VS_Facility__c/fields/VS_Pincode__c.field-meta.xml
<CustomField>
    <fullName>VS_Pincode__c</fullName>
    <label>Pincode</label>
    <description>Facility's 6-digit postal PIN code, used for locality-based discovery search (REQ-001).</description>
    <type>Text</type>
    <length>6</length>
</CustomField>