force-app/main/default/objects/VS_Facility__c/fields/VS_Sharing_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>VS_Sharing_Group_Id__c</fullName>
    <label>Sharing Group Id</label>
    <description>VS-20/REQ-053/D-031 facility-scoped record sharing. Records the 18-char Id of the Regular public Group that represents this facility's staff (one group per facility, DeveloperName VS_FAC_&lt;facilityId&gt;). Auto-provisioned by VS_FacilityTriggerHandler on facility insert (Group created async by VS_FacilityGroupProvisioner, Id written back here by VS_FacilityGroupLinker). NOTE: the appointment/patient managed-sharing recompute resolves the group by the deterministic Group DeveloperName, NOT by reading this field, so that the hot path never depends on this custom field's FLS (this DE org D-028-FLS-filters custom fields even in system-mode SOQL). This field is the provisioner's durable record of the Id for reporting/admin. Internal system field: system-owned, never citizen/PII data. ExternalId to index lookups. If null, the facility simply has not been group-provisioned yet (District View-All still applies).</description>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
</CustomField>